--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
+    --black: #1a1a1a;
 
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
@@ -14,26 +15,18 @@
     -webkit-text-size-adjust: 100%;
 }
 
-a {
-    font-weight: 500;
-    color: #646cff;
-    text-decoration: inherit;
-}
-a:hover {
-    color: #535bf2;
-}
-
-body {
+* {
     margin: 0;
-    display: flex;
-    place-items: center;
-    min-width: 320px;
-    min-height: 100vh;
+    padding: 0;
 }
 
 h1 {
     font-size: 3.2em;
     line-height: 1.1;
+}
+
+.clickable_icon {
+    cursor: pointer;
 }
 
 button {
@@ -44,11 +37,13 @@ button {
     font-weight: 500;
     font-family: inherit;
     background-color: #1a1a1a;
+    color: white;
     cursor: pointer;
     transition: border-color 0.25s;
 }
 button:hover {
     border-color: #646cff;
+    background-color: rgb(58, 58, 58);
 }
 button:focus,
 button:focus-visible {
@@ -62,8 +57,5 @@ button:focus-visible {
     }
     a:hover {
         color: #747bff;
-    }
-    button {
-        background-color: #f9f9f9;
     }
 }
