Adicionado novas questões, fazendo o input funcionar e tornando elas apagaveis

--- a/src/Components/InputArea/InputArea.module.css
+++ b/src/Components/InputArea/InputArea.module.css
@@ -11,3 +11,11 @@
     align-items: center;
     margin-top: 10px;
 }
+
+.input_area_group {
+    margin-top: 10px;
+}
+
+.inputs_input_group {
+    margin-left: 30px;
+}
