--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,21 @@
     cursor: pointer;
 }
 
+main > .row > [class^='col-'] {
+    height: calc(100vh - 2rem);
+}
+
+.form-area {
+    overflow-y: scroll;
+    height: calc(100vh - 2rem);
+}
+
 /* FIX - Incluir customização de input no Discipline Core */
 .form-control {
     display: block;
     width: 100%;
     padding: .200rem .40rem;
+    margin-bottom: .75rem;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -24,4 +34,44 @@
     border-radius: var(--dcp-border-radius-sm);
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
+
+.form-control:focus {
+    border-color: #86b7fe;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem var(--dcp-primary-border-color);
+}
+
+
+.dcp-button.primary:hover,
+.dcp-icon-button.primary:hover {
+    background-color: var(--dcp-primary-border-color);
+}
+
+.dcp-button {
+    padding: 0.6rem;
+}
+
+.dcp-btn-group {
+    display: flex;
+}
+
+.dcp-btn-group button,
+.dcp-btn-group a {
+    margin: 0;
+}
+
+.dcp-btn-group .dcp-icon-button {
+    border-width: 1px 1px 1px 0px;
+}
+
+.dcp-btn-group :first-child {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.dcp-btn-group :last-child {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
 /*  */
