--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,6 @@ body, html {
 }
 /*  */
 
-.watch-area {
-    height: calc(100vh - 2rem);
-}
-
 :root {
     line-height: 1.5;
     font-weight: 400;
@@ -49,7 +45,7 @@ h1 {
     cursor: pointer;
 }
 
-button {
+/* button {
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
@@ -70,7 +66,7 @@ button:hover {
 button:focus,
 button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
     :root {
